# custd-sdk

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .infisical.json  .mise.toml  AGENTS.md  BUGS.md  PROGRESS.md  README.md  composer.json  justfile  mise.toml  package.json  phpunit.xml  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: actionlint.yaml
.github/workflows/: ci.yml  release-mirrors.yml
.mise/: infisical-env.sh
archive/: 2026-07-19_0109_BUGS.md
contract-fixtures/: reporting-query-awthy-trust.json  valid-awthy-audit-event.json  valid-awthy-woocommerce-flow-event.json
docs/: reporting.md
docs/changelog/: 2026-06-16-v1.3.0-package-split.md  2026-06-21-v1.4.0-request-compression.md  2026-07-02-v1.5.6-dependency-security.md  2026-07-02-v1.5.7-wordpress-version-sync.md  2026-07-05-v1.5.8-measurement-admin-helpers.md  2026-07-06-v1.5.9-measurement-proof-helpers.md  2026-07-18-v1.6.5-exact-subject-insights.md  2026-07-19-v1.6.6-prepared-data-readiness.md
docs/plans/: main_plan.md  (+5 more)
scripts/: bump-version.sh  check-js-source-archive.sh  publish-release-mirror.sh  test-bump-version.sh  test-publish-release-mirror.sh
sdk-go/: reporting.go  reporting_test.go
sdk-js/: .npmrc  README.md  biome.json  package.json  tsconfig.json
sdk-php/: README.md  composer.json  phpstan.neon  phpunit.xml
sdk-python/: README.md  pyproject.toml
sdk-python/scripts/: smoke-dev.py
sdk-python/src/custd/: __init__.py  client.py
sdk-python/tests/: test_admin.py  test_client.py  test_compression.py  test_packaging.py  test_provisioning.py  test_reporting.py
(+64 files in other folders)
