[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "custd-sdk"
version = "1.2.1"
description = "custd ingestion SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "HaakCo" }
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
custd = ["py.typed"]
