[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "custd-sdk"
version = "1.5.9"
description = "custd ingestion SDK"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "HaakCo" }
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
custd = ["py.typed"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]
